Text-align: left, link hover effect & fixed last box-shadow error

--- a/zen/style.scss
+++ b/zen/style.scss
@@ -23,13 +23,14 @@ $Card3: HSLA(149, 69%, 36%, .75); // green
 $Card4: HSLA(45, 89%, 57%, 1.00); // yellow
 $Card2: HSLA(200, 88%, 53%, 1.00); // blue
 $Card5: HSLA(357, 68%, 53%, 1.00); // red
+$paragraph: left;
 /*----mixins-------*/
 @mixin flex-full{
 	flex: $flex-full;
 	text-align: $text-align;
 	border-radius: $border-radius-size;
 	position: $position;
-	text-align: center;
+	text-align: $paragraph;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	// border: .05em solid black; // No border is needed
@@ -41,7 +42,7 @@ $Card5: HSLA(357, 68%, 53%, 1.00); // red
 	text-align: $text-align;
 	border-radius: $border-radius-size;
 	position: $position;
-	text-align: center;
+	text-align: $paragraph;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	padding: 1em;
 	margin-bottom: 1em;
@@ -53,7 +54,7 @@ $Card5: HSLA(357, 68%, 53%, 1.00); // red
 	text-align: $text-align;
 	border-radius: $border-radius-size;
 	position: $position;
-	text-align: center;
+	text-align: $paragraph;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	padding: 1em;
 	margin-bottom: 1em;
@@ -64,7 +65,7 @@ $Card5: HSLA(357, 68%, 53%, 1.00); // red
 	background-color:$Card1;
 	flex-direction:$flex-row;
 	border-radius: 0  0 14px 14px;
-	text-align: center;}
+	text-align: center !important;} // why is the footer NOT centered?
 @mixin design-sidebar{
 	position: absolute;
 	width:15%;
@@ -79,9 +80,25 @@ $Card5: HSLA(357, 68%, 53%, 1.00); // red
 	// border: .05em solid black;
   border-radius: $border-radius-size;}
 @mixin box-background{
-  box-shadow: 0px 10px 20px -12px black;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	// border: .05em solid black;
   border-radius: $border-radius-size;} 
+@mixin link1{
+text-decoration: none;
+	color: $Card4;
+	position: relative;}
+@mixin link2{
+position: absolute;
+content: "";
+width: 0;
+left: 0;
+bottom: -1px;
+height: 2px;
+background-color: #333;
+transition: all 0.3s linear;}
+@mixin link3{
+width: 100%;
+left: 0;}
 body{
 	font: 15px/1.5 Arial, Helvetica, sans-serif;
 	padding:1em;
@@ -217,13 +234,15 @@ body{
     order:-1;
     flex:$flex-column-support;
     padding:5px;
+		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+		border-radius: 14px  14px 14px 14px;
     margin-top:1%;}
   .requirements{
-    align-self:center;
+    align-self:$paragraph;
     flex:0 0 50%;
     padding:5px;
-      margin-top:2%;
-      margin-bottom:2%;
+    margin-top:2%;
+    margin-bottom:2%;
     @include box-background;}
 	.sidebar{ @include design-sidebar;}
   footer{ @include design-footer;}
@@ -255,47 +274,55 @@ p{
 	background: $Card2;
 	border-radius: $border-radius-size;
 	position: $position;
-	text-align: center;
+	text-align: $paragraph;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	// border: .05em solid black; // No border is needed
 	padding: 1em; 
-	margin-bottom: 1em;
-}
+	margin-bottom: 1em;}
 	@keyframes fadeIn { // are all main sections (white bg) fading in?
 		from {opacity: 0; opacity: 1/9;} 
 		to { opacity: 1}}
-	.page-wrapper { 
-		opacity: 0;
-		animation: fadeIn ease-in 1;
-		animation-fill-mode: forwards;
-		animation-duration: 1s;
-		animation-delay: .3s;}
-	.intro { 
-		opacity: 0;
-		animation: fadeIn ease-in 1;
-		animation-fill-mode: forwards;
-		animation-duration: 1s;
-		animation-delay: .6s;}
-	.supporting{
-		opacity: 0;
-		animation: fadeIn ease-in 1;
-		animation-fill-mode: forwards;
-		animation-duration: 1s;
-		animation-delay: .9s;}
-	a{	
-		text-decoration: none;
-		color: $Card4; // actual link
-		// font-style: italic;
-		font-weight: bold;}
-	ul{	
-		list-style-type: none;
-		color: $Card3;  // the word "by"
-		text-align: left;}
-	h1{
-		font-size: 40.5pt;
-	}
-	h2{
-		font-size: 15pt;
-		font-family: Arial, Helvetica, sans-serif;
-	}
+.page-wrapper { 
+	opacity: 0;
+	animation: fadeIn ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 1s;
+	animation-delay: .3s;}
+.intro { 
+	opacity: 0;
+	animation: fadeIn ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 1s;
+	animation-delay: .6s;}
+.supporting{
+	opacity: 0;
+	animation: fadeIn ease-in 1;
+	animation-fill-mode: forwards;
+	animation-duration: 1s;
+	animation-delay: .9s;}
+a{	
+	text-decoration: none;
+	color: $Card4; // actual link
+	// font-style: italic;
+	font-weight: bold;
+	position: relative;
+}
+ul{	
+	list-style-type: none;
+	color: black;  // the word "by"
+	text-align: left;}
+h1{
+	font-size: 40.5pt;
+}
+h2{
+	font-size: 15pt;
+	font-family: Arial, Helvetica, sans-serif;
+}
+.zen-validate-html { @include link1;}
+.zen-validate-html:after { @include link2;}
+.zen-validate-html:hover:after { @include link3;}
+// do above for specific or below for all links
+a { @include link1;}
+a:after { @include link2;}
+a:hover:after { @include link3;}
